--- a/svelte-frontend/package.json
+++ b/svelte-frontend/package.json
@@ -16,12 +16,14 @@
     "postcss": "^8.4.33",
     "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
+    "svelte-preprocess": "^5.1.3",
     "tailwindcss": "^3.4.1",
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   },
   "dependencies": {
-    "@sveltejs/adapter-auto": "^3.1.1"
+    "@sveltejs/adapter-auto": "^3.1.1",
+    "svelte-spa-router": "^4.0.1"
   }
 }
