change the file extension of routes.js to routes.ts for solving reference errors.

--- a/svelte-frontend/tsconfig.json
+++ b/svelte-frontend/tsconfig.json
@@ -16,6 +16,6 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+  "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte", ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
