--- a/svelte-frontend/tsconfig.node.json
+++ b/svelte-frontend/tsconfig.node.json
@@ -5,5 +5,5 @@
     "module": "ESNext",
     "moduleResolution": "bundler"
   },
-  "include": ["src/**/*.svelte", "src/**/*.ts", "vite.config.ts"]
+  "include": ["src/**/*.svelte", "src/**/*.ts", "vite.config.ts", "src/pages/**/*.svelte"]
 }
