--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@tsconfig/svelte": "^5.0.2",
+    "@types/recorder-js": "^1.0.4",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
     "svelte": "^4.2.8",
@@ -24,6 +25,7 @@
   },
   "dependencies": {
     "@sveltejs/adapter-auto": "^3.1.1",
+    "recorder-js": "^1.0.7",
     "svelte-spa-router": "^4.0.1"
   }
 }
